--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>My Site!</title>
     </head>
     <body>
-        <h1>This is my github pages website!!</h1>
+        <h1>Database ko assignment pathau ta arjun!!</h1>
     </body>
 </html>
