--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Site!</title>
+        <title>JAMES(MS WORD) ERD</title>
     </head>
     <body>
-        <h1>oe logic ko pthau ta assignment.</h1>
+        <h1>James ESTO KHTRA DIAGRAM MS WORD MA KASARI BANAYAU?????</h1>
     </body>
 </html>
