--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>JAMES(MS WORD) ERD</title>
     </head>
     <body>
-        <h1>James ESTO KHTRA DIAGRAM MS WORD MA KASARI BANAYAU?????</h1>
+        <h1>James ESTO KHTRA DIAGRAM MS WORD MA KASARI BANAYAU??????</h1>
     </body>
 </html>
