--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HELLO!!</title>
+        <title>It's me anish</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     </head>
     <body>
@@ -29,6 +29,6 @@
             <h1>PORTFOLIO!!!!</h1>
             <h1>porfolio</h1>
           </div>
-          <img src="https://scontent.fbir4-1.fna.fbcdn.net/v/t1.15752-9/335015365_1663036494143476_604227252829742452_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=ae9488&_nc_ohc=RxLVjmdr9tEAX8cQJ9P&_nc_ht=scontent.fbir4-1.fna&oh=03_AdRtqkjwgixhcLpdQdD-HgDDikKvYFMQx_OGQNdVVBmVkw&oe=6434D149" alt="durga">
+          <h1>HI my name is Anish!!</h1>
     </body>
 </html>
