--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>It's me anish</title>
+        <title>It's me asmin</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     </head>
     <body>
@@ -29,6 +29,6 @@
             <h1>PORTFOLIO!!!!</h1>
             <h1>porfolio</h1>
           </div>
-          <h1>HI my name is Anish!!</h1>
+          <h1>HI my name is Asmin!!</h1>
     </body>
 </html>
