--- a/index.html
+++ b/index.html
@@ -73,9 +73,15 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                         Hello, my name is Prajjwal Adhikari. I am a passionate individual with a love for competitive coding and programming, as well as music. I am highly motivated and have a drive for excellence in all aspects of my life.
+
+			Competitive coding is one of my biggest passions. I have honed my skills in problem-solving, algorithm design, and data structures. I have participated in various coding competitions and challenges where I have consistently showcased my technical expertise and ingenuity. My love for coding has driven me to constantly improve my skills and stay updated with the latest trends and technologies in the field.
+
+			Apart from coding, I am also an ardent music lover. I have been playing the guitar and singing for several years, and my passion for music has only grown stronger over time. I find solace in music and believe that it is a powerful medium that can connect people from different backgrounds and cultures.
+
+As a person, I am friendly, approachable, and always willing to help others. I am a team player who works collaboratively with my peers and enjoys sharing my knowledge and expertise. My positive attitude and can-do spirit have earned me the respect and admiration of my colleagues and peers.
+
+Overall, I am a multifaceted individual with a deep passion for coding, music, and life. I am not afraid to take on challenges and I am always striving for excellence in everything I do.
                     </p>
                 </div>
             </div>
